codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_missing_limits_message.snap
---
source: tui/src/status/tests.rs
assertion_line: 249
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────╮
│  Model:            gpt-5-codex (reasoning none, summaries auto) │
│  Version:          v0.1.0-alpha.12                              │
│  Directory: [[workspace]]                                       │
│  Approval:         on-request                                   │
│  Sandbox:          read-only                                    │
│  Agents.md:        <none>                                       │
│                                                                 │
│  Token usage:      750 total  (500 input + 250 output)          │
│  Context window:   100% left (750 used / 272K)                  │
│  Limits:           send a message to load usage data            │
╰─────────────────────────────────────────────────────────────────╯
